--- a/themes/apollo/sass/parts/_misc.scss
+++ b/themes/apollo/sass/parts/_misc.scss
@@ -2,6 +2,10 @@
   color: var(--primary-color);
 }
 
+.highlight-primary {
+  color: var(--primary-color);
+}
+
 .draft-label {
   color: var(--hover-color);
   text-decoration: none;
