--- a/themes/apollo/templates/homepage.html
+++ b/themes/apollo/templates/homepage.html
@@ -1,16 +1,18 @@
 {% extends "base.html" %}
-
-{% macro home_page(section) %}
-    <main>
-        <article>
-            <section class="body">
-                {{ post_macros::page_header(title=section.title) }}
-                {{ section.content | safe }}
-            </section>
-        </article>
-    </main>
-{% endmacro home_page %}
+{% import "macros/macros.html" as post_macros %}
 
 {% block main_content %}
-    {{ self::home_page(section=section) }}
+    <main>
+        <!-- Hero Section -->
+        <div class="homepage-hero">
+            <h1 class="homepage-hero-title">{{ section.title }}</h1>
+            <p class="homepage-hero-subtitle">{{ section.extra.subtitle }}</p>
+            <p class="homepage-hero-description">{{ section.extra.description | markdown | safe }}</p>
+        </div>
+
+        <!-- Main Content -->
+        <section class="homepage-section">
+            {{ section.content | safe }}
+        </section>
+    </main>
 {% endblock main_content %}
