--- a/themes/apollo/templates/_giscus_script.html
+++ b/themes/apollo/templates/_giscus_script.html
@@ -1,2 +1,15 @@
-<script src="https://utteranc.es/client.js" repo="YOUR_NAME/YOUR_REPO" issue-term="pathname" theme="github-light" crossorigin="anonymous" async>
+<script src="https://giscus.app/client.js"
+        data-repo="guerrantif/guerrantif.github.io"
+        data-repo-id="R_kgDOKR9g4A"
+        data-category="Blog Comments"
+        data-category-id="DIC_kwDOKR9g4M4Cu7UD"
+        data-mapping="pathname"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="top"
+        data-theme="fro"
+        data-lang="en"
+        crossorigin="anonymous"
+        async>
 </script>
