feat: improve site navigation and usability
- Add page-level TOC control with toc=false override support
- Open social media links in new tabs for better UX
- Disable TOC for homepage, about, contact, and short blog posts
- Keep TOC enabled for research page and long-form content

--- a/themes/apollo/templates/page.html
+++ b/themes/apollo/templates/page.html
@@ -97,7 +97,7 @@
 
 {% block right_content %}
     {# Optional table of contents #}
-    {% if config.extra.toc | default(value=false) and page.toc %}
+    {% if (page.extra.toc | default(value=config.extra.toc) | default(value=false)) and page.toc %}
         {% include "partials/toc.html" %}
     {% endif %}
 {% endblock right_content %}
